fixed back button z-index

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -11,5 +11,5 @@ $light-gray: #F4F4F4;
 
 $primary:  #EB6440;
 $secondary: #497174;
-$white: #EFF5F5;
-$bg-color: #D6E4E5;
+$white: #D6E4E5;
+$bg-color: #EFF5F5;
